# parking

./: .gitignore  BaseDialog.qml  Building.qml  CMakeLists.txt  CusMenu.qml  LineEdit.qml  Property.qmlproject  QuestionDialog.qml  README.md  configure.cpp  configure.h  database.js  editdialog.qml  icon.aps  icon.rc  log.cpp  log.h  main.cpp  main.qml  main.qrc  parkmodel.cpp  parkmodel.h  searchdialog.qml  setdialog.qml  sqlite.cpp  sqlite.h
